style: fix button vertical stretch

--- a/src/app/features/notes/notes-sidebar/notes-sidebar.component.css
+++ b/src/app/features/notes/notes-sidebar/notes-sidebar.component.css
@@ -72,7 +72,6 @@
 
 .sidebar-button-wrapper {
   margin: 0.5rem calc(1rem + 2px) 0;
-  flex-grow: 1;
   align-self: stretch;
   display: flex;
   position: sticky;
